--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -1,11 +1,30 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
-        "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:h="http://xmlns.jcp.org/jsf/html"
-      xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-      xmlns:f="http://xmlns.jcp.org/jsf/core">
-   <f:view>
-      <h:outputLabel value="Hello, world"/>
-   </f:view>
+<!DOCTYPE html>
+<html lang="en"
+	  xmlns="http://www.w3.org/1999/xhtml"
+	  xmlns:h="http://xmlns.jcp.org/jsf/html"
+	  xmlns:f="http://xmlns.jcp.org/jsf/core"
+	  xmlns:p="http://primefaces.org/ui">
+<h:head>
+	<title>P2</title>
+</h:head>
+<h:body>
+	<br />
+	<br />
+	<div style="width: 40%; margin: 0 auto">
+		<h:form id="userForm">
+			<p:messages id="messages" showDetail="true" autoUpdate="true" closable="true" />
+			<f:event listener="#{beanUsuarios.validarCredenciales}" type="postValidate" />
+			<p:panel header="Logging In">
+				<h:panelGrid columns="2" cellpadding="5">
+						<p:outputLabel value="Email:" />
+						<p:inputText id="emailInput" value="#{beanUsuarios.email}" required="true" requiredMessage="Email no debe ser vacio"/>
+						<p:outputLabel value="Password:" />
+						<p:password id="passInput" value="#{beanUsuarios.password}" required="true" requiredMessage="Password no debe ser vacio"/>
+						<p:commandButton value="Log In" action="#{beanUsuarios.iniciarSesion}"/>
+					<p:button value="Registrar" href="salidita.xhtml"/>
+				</h:panelGrid>
+			</p:panel>
+		</h:form>
+	</div>
+</h:body>
 </html>
