--- a/src/main/webapp/productosDisponibles.xhtml
+++ b/src/main/webapp/productosDisponibles.xhtml
@@ -7,5 +7,8 @@
 </h:head>
 <h:body>
 	<h3>Salidita.xhtml</h3>
+	<h:form>
+		<h:commandButton value="editar: 2" action="#{beanProductos.editarProducto(2)}"/>
+	</h:form>
 </h:body>
 </html>
