--- a/src/main/webapp/registroProducto.xhtml
+++ b/src/main/webapp/registroProducto.xhtml
@@ -10,22 +10,17 @@
 	<br />
 	<br />
 	<div style="width: 40%; margin: 0 auto">
-		<!--<f:metadata>-->
-			<!--<f:viewParam name="id" value="#{beanProductos.id}" />-->
-		<!--</f:metadata>-->
-		<h:form id="registerForm">
-			<p:messages id="messages" showDetail="true" autoUpdate="true" closable="true"/>
+		<h:form id="registerForm" enctype="multipart/form-data">
+			<p:messages id="messages" showDetail="true" autoUpdate="true" closable="true" />
 			<p:panel header="Formulario de productos">
 				<h:panelGrid columns="2" cellpadding="5">
 					<p:outputLabel value="Nombre:" />
-					<p:inputText value="#{beanProductos.nombre}" required="true" requiredMessage="Nombre no debe ser vacio"/>
+					<p:inputText value="#{beanProductos.nombre}" required="true" requiredMessage="Nombre no debe ser vacio" />
 					<p:outputLabel value="Descripcion:" />
-					<p:inputText value="#{beanProductos.descripcion}" required="true" requiredMessage="Descripcion no debe ser vacio"/>
+					<p:inputText value="#{beanProductos.descripcion}" required="true" requiredMessage="Descripcion no debe ser vacio" />
 					<p:outputLabel value="Cantidad:" />
-					<p:spinner value="#{beanProductos.cantidad}" min="0"/>
-					<p:outputLabel value="Cantidad:" />
-					<p:fileUpload value="#{beanProductos.imagen}" mode="simple" skinSimple="true"/>
-					<p:commandButton value="Guardar" action="#{beanProductos.guardarProducto}"/>
+					<p:spinner value="#{beanProductos.cantidad}" min="0" />
+					<p:commandButton value="Guardar" action="#{beanProductos.guardarProducto}" ajax="true"/>
 				</h:panelGrid>
 			</p:panel>
 		</h:form>
