--- a/src/main/webapp/productosDisponibles.xhtml
+++ b/src/main/webapp/productosDisponibles.xhtml
@@ -38,7 +38,7 @@
 					<p:column headerText="Acciones">
 						<p:commandButton icon="fa fa-edit" action="#{beanProductos.editarProducto(p)}"/>
 						<p:commandButton icon="fa fa-eye" action="#{beanDetalleProducto.mostrarDetallesProducto(p)}"/>
-						<p:commandButton icon="fa fa-cart-plus" action="#{beanCarrito.agregarProducto(p)}"/>
+						<p:commandButton icon="fa fa-cart-plus" action="#{beanCarrito.formCarrito(p)}"/>
 					</p:column>
 				</p:dataTable>
 			</h:form>
