--- a/src/main/webapp/detallesProducto.xhtml
+++ b/src/main/webapp/detallesProducto.xhtml
@@ -8,17 +8,17 @@
 	<title>P2</title>
 </h:head>
 <h:body>
+	<h:form>
+		<p:button value="Volver a lista" href="productosDisponibles.xhtml" icon="fa fa-reply" ajax="true"/>
+	</h:form>
 	<p:panel header="Producto: #{beanDetalleProducto.productoMostrado.nombre}">
 		<p:panelGrid columns="2">
 			<h:outputText value="Descripcion:" />
 			<h:outputText value="#{beanDetalleProducto.productoMostrado.descripcion}" />
-
 			<h:outputText value="Precio:" />
 			<h:outputText value="#{beanDetalleProducto.productoMostrado.precio}" />
-
 			<h:outputText value="Existencia:" />
 			<h:outputText value="Quedan: #{beanDetalleProducto.productoMostrado.cantidad}" />
-
 			<h:outputText value="Number:" />
 			<h:outputText value="24" />
 		</p:panelGrid>
