--- a/src/main/webapp/productosDisponibles.xhtml
+++ b/src/main/webapp/productosDisponibles.xhtml
@@ -7,6 +7,8 @@
 	<title>P2</title>
 </h:head>
 <h:body>
+	<p:button value="Ir al carrito" href="carrito.xhtml" icon="fa fa-shopping-cart" ajax="true"/>
+
 	<br />
 	<br />
 	<div style="width: 80%; margin: 0 auto">
