--- a/src/main/webapp/registroProducto.xhtml
+++ b/src/main/webapp/registroProducto.xhtml
@@ -12,8 +12,8 @@
 	<div style="width: 40%; margin: 0 auto">
 		<h:form id="registerForm" enctype="multipart/form-data">
 			<p:messages id="messages" showDetail="true" autoUpdate="true" closable="true" />
-			<p:panel header="Formulario de productos">
-				<h:panelGrid columns="2" cellpadding="5">
+			<p:panel header="Formulario de productos" >
+				<h:panelGrid columns="2" cellpadding="5" rendered="#{beanSesion.usuario != null}">
 					<p:outputLabel value="Nombre:" />
 					<p:inputText value="#{beanProductos.nombre}" required="true" requiredMessage="Nombre no debe ser vacio" />
 					<p:outputLabel value="Descripcion:" />
@@ -23,8 +23,9 @@
 					<p:outputLabel value="Cantidad:" />
 					<p:spinner value="#{beanProductos.cantidad}" min="0" required="true" requiredMessage="Cantidad no debe ser vacia"/>
 					<p:commandButton value="Guardar" action="#{beanProductos.guardarProducto}" icon="fa fa-send" ajax="true"/>
-					<p:commandButton value="Ir a lista" action="#{beanProductos.verLista}" icon="fa fa-reply" ajax="true"/>
+					<p:commandButton value="Ir a lista" action="#{beanProductos.verLista}" icon="fa fa-reply" ajax="true" immediate="true"/>
 				</h:panelGrid>
+				<h:outputText value="Inicia sesion para registrar un producto." style="font-weight: bolder" rendered="#{beanSesion.usuario == null}"/>
 			</p:panel>
 		</h:form>
 	</div>
