--- a/src/main/webapp/detallesProducto.xhtml
+++ b/src/main/webapp/detallesProducto.xhtml
@@ -9,7 +9,7 @@
 	<title>P2</title>
 </h:head>
 <h:body>
-	<p:button value="Volver a lista" href="productosDisponibles.xhtml" icon="fa fa-reply" ajax="true"/>
+	<p:button value="#{msg['back_to_list_message']}" href="productosDisponibles.xhtml" icon="fa fa-reply" ajax="true"/>
 	<div style="width: 60%; margin: 0 auto">
 		<br />
 		<p:panel header="Producto: #{beanDetalleProducto.productoMostrado.nombre}">
