--- a/src/main/webapp/productosDisponibles.xhtml
+++ b/src/main/webapp/productosDisponibles.xhtml
@@ -7,7 +7,7 @@
 	<title>P2</title>
 </h:head>
 <h:body>
-	<p:button value="Ir al carrito" href="carrito.xhtml" icon="fa fa-shopping-cart" ajax="true"/>
+	<p:button value="#{msg['to_cart_message']}" href="carrito.xhtml" icon="fa fa-shopping-cart" ajax="true"/>
 
 	<br />
 	<br />
